# weevr

./: .cspell.json  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLA-E.md  CLA-I.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  release-please-config.json  versions.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  tech-debt.yml
.github/workflows/: code-quality.yaml  codeql.yml  docs-deploy.yaml  docs.yml  issue-type.yaml  publish.yaml  release-quality.yaml  release.yaml  spark-tests.yaml
1.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0/contributing/: index.html
1.0/faq/: index.html
1.0/search/: search_index.json
1.1/: 404.html  index.html  objects.inv  sitemap.xml
1.1/contributing/: index.html
1.1/faq/: index.html
1.1/search/: search_index.json
1.10/: 404.html  index.html  objects.inv  sitemap.xml
1.10/contributing/: index.html
1.10/faq/: index.html
1.10/schema/: thread.json  weave.json  weevr.json
1.10/search/: search_index.json
1.11/: 404.html  index.html  sitemap.xml
1.11/contributing/: index.html
1.11/faq/: index.html
1.11/schema/: thread.json  weevr.json
1.11/search/: search_index.json
1.12/: 404.html  index.html  objects.inv  sitemap.xml
1.12/contributing/: index.html
1.12/faq/: index.html
1.12/search/: search_index.json
1.13/: 404.html  index.html  sitemap.xml
1.13/contributing/: index.html
1.13/faq/: index.html
1.13/schema/: weevr.json
1.13/search/: search_index.json
1.14/: 404.html  index.html  sitemap.xml
1.14/contributing/: index.html
1.14/faq/: index.html
1.14/schema/: weevr.json
1.14/search/: search_index.json
1.15/: 404.html  index.html  sitemap.xml
1.15/contributing/: index.html
1.15/faq/: index.html
1.15/search/: search_index.json
1.16/: 404.html  index.html  objects.inv  sitemap.xml
1.16/contributing/: index.html
1.16/faq/: index.html
1.16/search/: search_index.json
1.17/: 404.html  index.html  objects.inv  sitemap.xml
1.17/contributing/: index.html
1.17/faq/: index.html
1.17/schema/: thread.json
1.17/search/: search_index.json
1.18/: 404.html  index.html  objects.inv  sitemap.xml
1.18/contributing/: index.html
1.18/faq/: index.html
1.18/schema/: loom.json  thread.json  weave.json
1.18/search/: search_index.json
1.19/: 404.html  index.html  objects.inv  sitemap.xml
1.19/contributing/: index.html
1.19/faq/: index.html
1.19/schema/: thread.json  weevr.json
1.19/search/: search_index.json
1.2/: 404.html  index.html  objects.inv  sitemap.xml
1.2/contributing/: index.html
1.2/faq/: index.html
1.2/search/: search_index.json
1.3/: 404.html  index.html  objects.inv  sitemap.xml
1.3/contributing/: index.html
1.3/faq/: index.html
1.3/search/: search_index.json
1.4/: 404.html  index.html  objects.inv  sitemap.xml
1.4/contributing/: index.html
1.4/faq/: index.html
1.4/search/: search_index.json
1.5/: 404.html  index.html  sitemap.xml
1.5/contributing/: index.html
1.5/faq/: index.html
1.5/search/: search_index.json
1.6/: 404.html  index.html  objects.inv  sitemap.xml
1.6/contributing/: index.html
1.6/faq/: index.html
1.6/search/: search_index.json
1.7/: 404.html  index.html  sitemap.xml
1.7/contributing/: index.html
1.7/faq/: index.html
1.7/search/: search_index.json
1.8/: 404.html  index.html  objects.inv  sitemap.xml
1.8/contributing/: index.html
1.8/faq/: index.html
1.8/search/: search_index.json
1.9/: 404.html  index.html  objects.inv  sitemap.xml
1.9/contributing/: index.html
1.9/faq/: index.html
1.9/search/: search_index.json
docs/: contributing.md  faq.md  index.md
docs/concepts/: artifacts-model.md  execution-modes.md  idempotency.md  thread-weave-loom.md  why-weevr.md
docs/guides/: audit-templates.md  config-resolution.md  connections.md  dimension-modeling.md  engine-internals.md  execution-settings.md  exports.md  fabric-runtime.md  fact-tables.md  observability.md  resolve.md  schema-drift.md  sub-pipelines.md  telemetry-architecture.md  thread-templates.md  warps.md
docs/how-to/: add-a-thread.md  add-validation-rules.md  cache-a-lookup.md  implement-custom-telemetry-sink.md  run-from-fabric-pipeline.md
docs/reference/: compatibility.md  configuration-keys.md  json-schema.md
docs/release-notes/: 1.0.md  1.1.md  1.10.md  1.11.md  1.12.md  1.13.md  1.14.md  1.15.md  1.16.md  1.17.md  1.18.md  1.19.md  1.2.1.md  1.2.md  1.3.md  1.4.md  1.5.md  1.6.md  1.7.md  1.8.md  1.9.md
docs/schema/: loom.json  (+3 more)
examples/: README.md  basic-thread.thread  calendar-dimension.thread  dim_customer.warp  exports-thread.thread  full-loom.loom  hooks-lookups.weave  hooks-quality-gates.weave  incremental-thread.thread  merge-thread.yml  multi-thread-weave.weave  resolve-fk.thread  thread-with-transforms.thread  transform-extensions.thread  validation-thread.thread  warp-auto.thread  warp-enforcement.thread
scripts/: generate_schema.py  mkdocs_merge_weevr.py
tests/: conftest.py  spark_helpers.py  test_no_pyspark_imports.py
(+1212 files in other folders)
